added url-shortening service project

--- a/index.1.hbs
+++ b/index.1.hbs
@@ -156,12 +156,12 @@
 
                 <!-- Portfolio img6 -->
                 <div class="col-md-4 col-sm-6 portfolio-item">
-                    <a href="http://codepen.io/arandriamihaja/full/KzLMbq/" target="_blank" class="portfolio-link" data-toggle="modal">
-                        <img src="https://image.ibb.co/fw84fk/large.png" class="img-responsive" alt="random quote">
+                    <a href="https://canada-url.herokuapp.com/" target="_blank" class="portfolio-link" data-toggle="modal">
+                        <img src="https://preview.ibb.co/cupQOF/Screen_Shot_2017_06_12_at_11_00_34_AM.png" class="img-responsive" alt="URL-shortener">
                     </a>
                     <div class="portfolio-caption">
-                        <h4>Random Quote machine</h4>
-                        <p id="small-text" class="text-muted">Bootstrap, jQuery</p>
+                        <h4>URL-shortening service</h4>
+                        <p id="small-text" class="text-muted">MongoDB, Express, Stripe</p>
                     </div>
                 </div>
                 <!-- End of Portfolio img6 -->
