--- a/index.1.hbs
+++ b/index.1.hbs
@@ -48,9 +48,9 @@
     <div class="intro-header">
         <div class="bg-overlay">
             <div class="container intro">
-                <h1 id='position'>Full stack web developer</h1>
-                <img class="img-circle img-responsive" src="https://media.licdn.com/mpr/mpr/shrinknp_200_200/AAEAAQAAAAAAAAsrAAAAJGI2ZWVhOTg3LTE1YzAtNDEwMy04MzQyLTMzOTQzNWQ3YWNkYw.jpg"
-                    alt="my_picture">
+                <h1 id='position'>Web developer</h1>
+                <h3> Javascript, NodeJs, ReactJs, PostgreSQL, jQuery, Bootstrap, Git.</h3>
+                
             </div>
         </div>
     </div>
@@ -73,7 +73,7 @@
                     <p class='tech'>Libraries: </p>
                     <p class='tech_list'> Express.js, jQuery, Bootstrap, Underscore & lodash, Mongoose, some Mocha. </p>
                     <p class='tech'>Tools:</p>
-                    <p class='tech_list'>Git, Node.js, MongoDB, Agile Methodologies.</p>
+                    <p class='tech_list'>Git,React, Node, MongoDB, Agile Methodologies.</p>
 
 
                 </div>
